# Projeto_ICG

./: .gitignore  README.md  apoio  apoio.cpp  cgprog  definitions.h  mygl.cpp  mygl.h
atv1/: mygl.h
atv2/: main.cpp
projeto/: CMakeLists.txt  GPTquefez.cpp  SistemaSolar copy.cpp  SistemaSolar.cpp  main  main.cpp  sis
projeto/include/: astro.h  camera.h  menu.h  textura.h
projeto/src/: astro.cpp  camera.cpp  main.cpp  menu.cpp  textura.cpp
